[package]
name = "rust-screen-grabber-tools"
description = "A companion image manipulation app for Rust Screen Grabber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri-dialog = "0.1.1"
clap = { version = "4.4.6", features = ["derive"] }
druid = {version= "0.8.3", features = ["image-all"]  }
image = "0.24.7"
num-traits = "0.2.17"
kurbo = "0.10.4"
notify-rust = "4.10.0"
druid-shell = "0.8.3"
screenshots = "0.8.5"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23.1"
cocoa = "0.25.0"
objc = "0.2.7"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "winreg"] }

[package.metadata.bundle]
name = "Rust Screen Grab Tools"
identifier = "com.screencrab"
icon = ["icons/Square*.png"]
version = "0.1.0"
category = "Utility"
short_description = "A companion image manipulation application for Rust Screen Grabber"
long_description = """
An application that allows to edit a captured image via Rust Screen Grabber
"""
osx_minimum_system_version = "10.11"

